added Back to Top

--- a/Session 2_02-02-2021/ebook.html
+++ b/Session 2_02-02-2021/ebook.html
@@ -4,7 +4,7 @@
     <title>Data Science From Scratch - ebook</title>
 </head>
 <body>
-<h1> Index </h1>
+<h1 id="index"> Index </h1>
     <ol>
         <a href="#intro"><li>Introduction</li></a>
 	<ul>
@@ -73,6 +73,7 @@ Now, before you start feeling too jaded: some data scientists also occasionally 
 their skills for good—using data to make government more effective, to help the
 homeless, and to improve public health. But it certainly won’t hurt your career if you
 like figuring out the best way to get people to click on advertisements.</p>
+<a href="#index">Back To Top</a>
 
 <h1 id="python">Chapter 2 - A Crash Course in Python</h1>
 <p>All new employees at DataSciencester are required to go through new employee ori‐
@@ -106,6 +107,7 @@ to a newcomer) is often described as “Pythonic.” Although this is not a book
 Python, we will occasionally contrast Pythonic and non-Pythonic ways of accom‐
 plishing the same things, and we will generally favor Pythonic solutions to our prob‐
 lems.</p>
+<a href="#index">Back To Top</a>
 
 
 <h1 id="viz">Chapter 3 - Visualizing Data</h1>
@@ -132,6 +134,7 @@ Once you’re done, you can save it (with savefig()) or display it (with show())
 For example, making simple plots (like Figure 3-1) is pretty simple:</p>
 <img src="./ebook_pics/line_chart.png" alt="line chart"></br>
 <caption align = "center"><i>Example of a Line Chart</i></caption>
+<a href="#index">Back To Top</a>
 
 <h1 id="algebra">Chapter 4 - Linear Algebra</h1>
 <p>Linear algebra is the branch of mathematics that deals with vector spaces. Although I
@@ -153,6 +156,7 @@ of three numbers corresponds to a vector in three-dimensional space, and vice ve
 3], as shown in Figure 4-1.</p>
 <img src="./ebook_pics/vector.png", alt="adding two vectors"></br>
 <caption align = "center"><i>Addition of Two Vectors</i></caption>
+<a href="#index">Back To Top</a>
 
 
 <h1 id="stats">Chapter 5 - Statstics</h1>
@@ -173,6 +177,6 @@ tures of our data.
 plt.bar(). as shown in figure below:</p>
 <img src="./ebook_pics/friends.png", alt="A histogram of friends counts"></br>
 <caption align = "center"><i>A histogram of friends counts</i></caption>
-    
+<a href="#index">Back To Top</a>
 </body>
 </html>
